--- a/skul-frontend/package.json
+++ b/skul-frontend/package.json
@@ -10,11 +10,17 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.6.1",
     "@mui/material": "^5.6.0",
+    "@react-pdf-viewer/core": "^3.3.2",
+    "@react-pdf-viewer/default-layout": "^3.3.2",
+    "@react-pdf/pdfkit": "^2.1.0",
+    "@react-pdf/render": "^2.1.0",
+    "@react-pdf/renderer": "^2.1.1",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "pdfjs-dist": "^2.6.347",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0",
@@ -28,9 +34,10 @@
     "react-select": "^5.2.2",
     "react-signature-canvas": "^1.0.5",
     "react-signature-pad": "0.0.6",
-    "react-to-print": "^2.14.6",
+    "react-to-print": "^2.14.7",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
+    "save": "^2.5.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
